--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,202 @@
-streamlit
-pandas
-numpy
-scikit-learn
-matplotlib
-seaborn
-Werkzeug
-Jinja2
-Flask
-json
-tensorflow
-os 
-random
-Keras
-requests
+altair==3.2.0
+analytics-python==1.2.9
+argh==0.26.2
+astor==0.8.0
+astroid==2.3.1
+astropy==3.2.1
+atomicwrites==1.3.0
+attrs==19.1.0
+auth==0.5.3
+awscli==1.16.309
+backcall==0.1.0
+bamboolib==1.10.0
+base58==1.0.3
+bcrypt==3.1.7
+beautifulsoup4==4.8.0
+bleach==3.1.0
+blinker==1.4
+bokeh==2.0.2
+boto3==1.9.253
+botocore==1.13.45
+branca==0.3.1
+bs4==0.0.1
+cachetools==4.1.0
+certifi==2019.6.16
+cffi==1.14.0
+chardet==3.0.4
+chart-studio==1.1.0
+Click==7.0
+cmake==3.17.2
+colorama==0.4.1
+confuse==1.0.0
+cryptography==2.9.2
+cvlib==0.2.3
+cycler==0.10.0
+decorator==4.4.0
+defusedxml==0.6.0
+django==2.2.1
+dnspython==1.16.0
+docutils==0.15.2
+dominate==2.4.0
+entrypoints==0.3
+enum-compat==0.0.3
+et-xmlfile==1.0.1
+eventlet==0.25.2
+falcon==2.0.0
+Flask==1.0.2
+Flask-Bootstrap==3.3.7.1
+Flask-MySQL==1.5.1
+folium==0.10.0
+future==0.18.1
+geographiclib==1.50
+geopy==1.20.0
+google-auth==1.4.2
+graphviz==0.13.2
+greenlet==0.4.15
+gunicorn==19.9.0
+h5py==2.9.0
+htmlmin==0.1.12
+idna==2.8
+image==1.5.27
+imageio==2.6.1
+importlib-metadata==0.23
+imutils==0.5.3
+inflect==2.1.0
+ipykernel==5.3.0
+ipython==5.5.0
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+isort==4.3.21
+itsdangerous==1.1.0
+jdcal==1.4.1
+jedi==0.14.0
+Jinja2==2.10.1
+jmespath==0.9.4
+joblib==0.13.2
+jsonschema==3.0.1
+jupyter-client==5.2.4
+jupyter-contrib-core==0.3.3
+jupyter-contrib-nbextensions==0.5.1
+jupyter-core==4.5.0
+jupyter-highlight-selected-word==0.2.0
+jupyter-latex-envs==1.4.6
+jupyter-nbextensions-configurator==0.4.1
+jupyterlab==1.2.15
+jupyterlab-server==1.1.5
+Keras==2.3.1
+Keras-Applications==1.0.6
+Keras-Preprocessing==1.1.0
+keylogger==2.7.3
+kiwisolver==1.1.0
+lazy-object-proxy==1.4.2
+llvmlite==0.29.0
+lxml==4.3.4
+MarkupSafe==1.1.1
+matplotlib==3.1.0
+mccabe==0.6.1
+missingno==0.4.2
+mistune==0.8.4
+mongoengine==0.19.1
+monotonic==1.5
+more-itertools==7.2.0
+mysql-connector==2.2.9
+nbconvert==5.5.0
+nbformat==4.4.0
+nltk==3.4.3
+notebook==5.7.8
+numba==0.45.1
+numpy==1.16.2
+oauthlib==3.1.0
+opencv-python==4.1.0.25
+openpyxl==2.6.1
+packaging==19.2
+pafy==0.5.4
+pandas==0.24.2
+pandas-profiling==2.3.0
+pandocfilters==1.4.2
+parso==0.5.0
+pathtools==0.1.2
+phik==0.9.8
+pickleshare==0.7.5
+Pillow==7.1.1
+pipenv==2018.11.26
+plotly==4.8.0
+pluggy==0.13.0
+progressbar==2.5
+prometheus-client==0.7.1
+prompt-toolkit==1.0.18
+protobuf==3.10.0
+py==1.8.0
+pyasn1==0.4.7
+pyasn1-modules==0.2.7
+pycparser==2.19
+pycurl==7.43.0.5
+pydeck==0.3.1
+Pygments==2.4.2
+PyJWT==1.7.1
+pylint==2.4.2
+pymongo==3.9.0
+PyMySQL==0.9.3
+pyparsing==2.4.0
+pyrsistent==0.15.2
+PySocks==1.7.1
+pytesseract==0.3.4
+pytest==5.2.1
+pytest-pylint==0.14.1
+python-dateutil==2.8.0
+pytz==2019.1
+pywinpty==0.5.5
+PyYAML==5.1.1
+pyzmq==18.0.2
+qgrid==1.1.1
+requests==2.22.0
+requests-oauthlib==1.2.0
+retrying==1.3.3
+rsa==3.4.2
+s3transfer==0.2.1
+scikit-learn==0.22.1
+scipy==1.2.1
+seaborn==0.9.0
+secure-smtplib==0.1.1
+selenium==3.141.0
+Send2Trash==1.5.0
+simplegeneric==0.8.1
+six==1.12.0
+sklearn==0.0
+slack-client==0.3.0
+soupsieve==1.9.2
+SpeechRecognition==3.8.1
+SQLAlchemy==1.3.17
+sqlparse==0.3.0
+streamlit==0.60.0
+tabulate==0.8.7
+terminado==0.8.2
+tesseract==0.1.3
+testpath==0.4.2
+textblob==0.15.3
+toml==0.10.0
+toolz==0.10.0
+tornado==5.1.1
+traitlets==4.3.2
+tweepy==3.8.0
+twilio==6.35.1
+typed-ast==1.4.0
+typing-extensions==3.7.4.2
+tzlocal==2.0.0
+urllib3==1.25.3
+validators==0.14.0
+virtualenv==16.6.1
+virtualenv-clone==0.5.3
+visitor==0.1.3
+watchdog==0.9.0
+wcwidth==0.1.7
+webencodings==0.5.1
+Werkzeug==0.16.0
+widgetsnbextension==3.5.1
+wrapt==1.11.2
+xlib==0.21
+xlrd==1.2.0
+XlsxWriter==1.1.5
+xlwt==1.3.0
+youtube-dl==2019.7.16
+zipp==0.6.0
